# AccountSelection-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  main.py
app/agent/account/: __init__.py  executor.py  planner.py  replanner.py  state.py
app/api/: auth.py  evaluate.py  rules.py
app/core/: auth.py  database.py  deps.py  llm.py
app/models/: account.py  request.py  user.py
app/services/: account_agent_service.py
app/tools/: __init__.py  extractor.py  fetcher.py  model_reviewer.py  pxb7_crawler.py  reporter.py  scorer.py  skin_quality.py
scripts/: build_data_check_docx.py  complete_excel_test.mjs  format_word_test.py  inspect_workbook.mjs  pxb7_crawler.mjs  render_pdf_page.mjs
static/: app.js  index.html  login.html  login.js  styles.css
tests/: test_extract_and_score.py  test_pxb7_batch_report.py
