[project]
name = "honor-account-evaluator-agent"
version = "0.1.0"
description = "王者荣耀账号筛选/评估 Agent，支持 Plan-Execute-Replan 流程和 SSE 输出。"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.5.0,<3.0.0",
    "httpx>=0.26.0",
    "langgraph>=0.0.40",
    "pymysql>=1.1.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

